--- a/flux-system/kustomization.yaml
+++ b/flux-system/kustomization.yaml
@@ -7,6 +7,37 @@ patches:
   - patch: |
       - op: add
         path: /spec/template/spec/containers/0/args/-
+        value: --concurrent=20
+    target:
+      kind: Deployment
+      name: "(kustomize-controller|helm-controller)"
+  - patch: |
+      - op: add
+        path: /spec/template/spec/containers/0/args/-
+        value: --rate-limit-interval=0m10s
+    target:
+      kind: Deployment
+      name: "(notification-controller)"
+  - patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: all
+      spec:
+        template:
+          spec:
+            containers:
+              - name: manager
+                resources:
+                  limits:
+                    cpu: 2000m
+                    memory: 2Gi      
+    target:
+      kind: Deployment
+      name: "(kustomize-controller|helm-controller|source-controller)"
+  - patch: |
+      - op: add
+        path: /spec/template/spec/containers/0/args/-
         value: --helm-cache-max-size=10
       - op: add
         path: /spec/template/spec/containers/0/args/-
@@ -16,4 +47,4 @@ patches:
         value: --helm-cache-purge-interval=5m      
     target:
       kind: Deployment
-      name: source-controller
+      name: source-controller    
