--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -32,6 +32,15 @@ jobs:
           # Keep this up-to-date with https://endoflife.date/kubernetes
           node_image: kindest/node:v1.25.11
           kubectl_version: v1.25.11
-      - name: flux create kustomization
+      - name: Set outputs
+        id: vars
         run: |
-          kubectl kustomize ./flux-system | kubectl apply -f-
+          REPOSITORY_NAME=${{ github.event.repository.name }}
+          BRANCH_NAME=${GITHUB_REF##*/}
+          COMMIT_SHA=$(git rev-parse HEAD)
+          PSEUDO_RAND_SUFFIX=$(echo "${BRANCH_NAME}-${COMMIT_SHA}" | shasum | awk '{print $1}')
+          TEST_REPO_NAME="${REPOSITORY_NAME}-${PSEUDO_RAND_SUFFIX}"
+          echo "test_repo_name=$TEST_REPO_NAME" >> $GITHUB_OUTPUT
+      - name: install flux manifests
+        run: |
+          flux install flux install --manifests flux-system/
