--- a/flux-system/kustomization.yaml
+++ b/flux-system/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - gotk-components.yaml
-  - gotk-sync.yaml
+  # - gotk-sync.yaml
 patches:
   - patch: |
       - op: add
@@ -51,7 +51,7 @@ patches:
   - patch: |
       - op: add
         path: /spec/template/metadata/labels/aadpodidbinding
-        value: bap-aks-test-02
+        value: flux-sops
     target:
       kind: Deployment
       name: source-controller    
